--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     padding: 20px;
     border-radius: 10px;
     margin: 20px;
+
   }
 
   .explication {
@@ -24,6 +25,8 @@
     padding: 20px;
     border-radius: 10px;
     margin: 20px;
+    max-width: 100%;
+    max-height: 100%;
   }
 
   .explication-texte {
